--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,43 @@
-<!-- header.component.html -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" [routerLink]="['/']">Planes flights</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a
+            class="nav-link nav-a"
+            [routerLinkActive]="['active']"
+            [routerLink]="['/arrivals']"
+            >Arrivals</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link nav-a"
+            [routerLinkActive]="['active']"
+            [routerLink]="['/departures']"
+            >Departures</a
+          >
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+
+
+<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Planes flights!</a>
     <button
@@ -15,12 +53,12 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <!-- <a
+        <a
           class="nav-link"
           [routerLinkActive]="['active']"
           [routerLink]="['/home']"
           ><span>Home</span></a
-        > -->
+        >
         <a
           class="nav-link"
           [routerLinkActive]="['active']"
@@ -30,5 +68,9 @@
       </div>
     </div>
   </div>
-</nav>
+</nav> -->
+
+
+
+
 
