--- a/src/app/components/arrivals/arrivals.component.html
+++ b/src/app/components/arrivals/arrivals.component.html
@@ -61,9 +61,9 @@
 
 <div class="statistika">
   <h5>Statistics:</h5>
-  <p>Arrivals at all: {{ total_records }}</p>
-  <p>Arrivals in late: {{ total_is_late }}</p>
-  <p>Arrivals in time: {{ total_records - total_is_late }}</p>
+  <p>Total arrivals: {{ total_records }}</p>
+  <p>Delayed arrivals: {{ total_is_late }}</p>
+  <p>Arrivals on time: {{ total_records - total_is_late }}</p>
 </div>
 
 <div class="filter">
@@ -77,7 +77,7 @@
       Sort by Town
     </button>
     <button (click)="onSort('arrival_time')" class="btn btn-secondary">
-      Sort by Arrival
+      Sort by Arrival time
     </button>
   </div>
 </div>
